MidiManagerAndroid: containers' clear and empty check were not matched

In Finalize(), MidiManagerAndroid clears |input_port_to_index_| and
|output_port_to_index_| explicitly, but checks |all_input_ports| and
|all_output_ports| to be empty in the destructor.

We should clear and check all four members in Finalize() and destructor.

Bug: 788684
Change-Id: Ia60f57a6faedb89559b0bb1019605bbcc0b78522
Reviewed-on: https://chromium-review.googlesource.com/790076
Reviewed-by: Yutaka Hirano <yhirano@chromium.org>
Commit-Queue: Takashi Toyoshima <toyoshim@chromium.org>
Cr-Commit-Position: refs/heads/master@{#519590}
Former-commit-id: d9de72a68487e0821370115aef972c04ec7257b4